# OpenSerialDebugger

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README-CN.md  README.md  clickablecombobox.cpp  clickablecombobox.h  command.cpp  command.h  fakemotor.cpp  fakemotor.h  fakeserialport.cpp  fakeserialport.h  icons.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  packet.h  packethandler.cpp  packethandler.h  parametermanager.cpp  parametermanager.h  plotdatahandlerthread.cpp  plotdatahandlerthread.h  protocol.txt  protocolparser.cpp  protocolparser.h  receivehandler.cpp  receivehandler.h  serialController.cpp  serialController.h  serialdatacontainer.cpp  serialdatacontainer.h  serialmonitor.cpp  serialmonitor.h  serialplotter.cpp  serialplotter.h  serialsendmonitor.cpp  serialsendmonitor.h
examples/arduino_led_simple/led_controll/: commands.txt  led_controll.ino  packet.h
examples/motor/: commands.txt
executable/translations/: qt_ca.qm  qt_de.qm  qt_es.qm  qt_ka.qm  qt_ko.qm  qt_pl.qm  qt_ru.qm  qt_uk.qm  qt_zh_CN.qm
